[package]
name = "marlin-agent-protocol"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-gerbil-ir.workspace = true
serde.workspace = true
toml.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true

[dev-dependencies]
serde_json.workspace = true
