[package]
name = "marlin-agent-route"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
