[package]
name = "marlin-agent-runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aho-corasick.workspace = true
globset.workspace = true
marlin-agent-environment.workspace = true
marlin-agent-graph.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-sessions.workspace = true
parking_lot.workspace = true
process-wrap = { version = "9.1.0", features = ["tokio1"] }
serde.workspace = true
sysinfo = "0.39.3"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "process"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true

[dev-dependencies]
marlin-agent-harness-types.workspace = true
marlin-agent-test-support.workspace = true
serde_json.workspace = true
tempfile.workspace = true
