[package]
name = "marlin-agent-sessions"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
rust-lang-project-harness.workspace = true
