[package]
name = "marlin-agent-sessions"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true

[dev-dependencies]
marlin-rust-project-harness-policy.workspace = true
