[package]
name = "marlin-agent-stream"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
litellm-rs.workspace = true
marlin-agent-protocol.workspace = true
serde.workspace = true
tokio.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true

[dev-dependencies]
marlin-agent-test-support.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
