[package]
name = "marlin-agent-test-support"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
marlin-agent-environment.workspace = true
marlin-agent-harness-types.workspace = true
marlin-agent-kernel.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-sessions.workspace = true
marlin-gerbil-ir.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true
