[package]
name = "marlin-gerbil-ir"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
marlin-org-model.workspace = true
marlin-workspace-patch.workspace = true
marlin-workspace-view.workspace = true
serde.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
rust-lang-project-harness.workspace = true
