[package]
name = "marlin-gerbil-scheme"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gerbil Scheme runtime bindings for typed Marlin artifacts."
license = "Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
marlin-agent-protocol.workspace = true
marlin-agent-runtime.workspace = true
marlin-gerbil-ir.workspace = true
marlin-org-model.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt"] }

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
futures-executor.workspace = true
marlin-org-memory.workspace = true
marlin-org-store.workspace = true
marlin-org-workflow.workspace = true
marlin-workspace-protocol.workspace = true
marlin-workspace-patch.workspace = true
marlin-workspace-status.workspace = true
marlin-workspace-view.workspace = true
rust-lang-project-harness.workspace = true
tempfile.workspace = true
