[package]
name = "marlin-gerbil-scheme"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Gerbil Scheme runtime bindings for typed Marlin artifacts."
license = "Apache-2.0"
readme = "README.md"
publish = false

[[bench]]
name = "deck_runtime_native"
harness = false

[dependencies]
marlin-agent-harness-types.workspace = true
marlin-agent-protocol.workspace = true
marlin-agent-graph.workspace = true
marlin-gerbil-ir.workspace = true
marlin-org-model.workspace = true
marlin-workspace-protocol.workspace = true
object.workspace = true
serde.workspace = true
serde_json.workspace = true
gerbil-scheme.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true

[dev-dependencies]
criterion.workspace = true
futures-executor.workspace = true
marlin-agent-kernel.workspace = true
marlin-agent-runtime.workspace = true
marlin-agent-storage = { workspace = true, features = ["turso"] }
marlin-git-utils.workspace = true
marlin-org-memory.workspace = true
marlin-org-store.workspace = true
marlin-org-workflow.workspace = true
marlin-workspace-patch.workspace = true
marlin-workspace-status.workspace = true
marlin-workspace-view.workspace = true
memoffset.workspace = true
static_assertions.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
marlin-rust-project-harness-policy.workspace = true
