[package]
name = "marlin-git-utils"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true

[build-dependencies]
marlin-rust-project-harness-policy.workspace = true
rust-lang-project-harness.workspace = true

[dev-dependencies]
rust-lang-project-harness.workspace = true
tempfile.workspace = true
