load("@marlin_crates//:defs.bzl", "crate_deps", "crate_edition")
load("//bazel:marlin_harness.bzl", "marlin_harness_crate")

marlin_harness_crate(
    name = "marlin_org_memory",
    srcs = glob(["src/**/*.rs"]),
    build_deps = ["//build-support/marlin-rust-project-harness-policy:marlin_rust_project_harness_policy"],
    edition = crate_edition(),
    gate_data = glob(["tests/**/*.rs"]),
    proc_macro_deps = crate_deps(["async-trait"]),
    deps = crate_deps(["parking_lot"]) + [
        "//crates/marlin-agent-graph:marlin_agent_graph",
        "//crates/marlin-agent-protocol:marlin_agent_protocol",
        "//crates/marlin-gerbil-ir:marlin_gerbil_ir",
        "//crates/marlin-org-model:marlin_org_model",
        "//crates/marlin-org-store:marlin_org_store",
        "//crates/marlin-org-workspace:marlin_org_workspace",
        "//crates/marlin-workspace-patch:marlin_workspace_patch",
        "//crates/marlin-workspace-protocol:marlin_workspace_protocol",
        "//crates/marlin-workspace-query:marlin_workspace_query",
        "//crates/marlin-workspace-status:marlin_workspace_status",
        "//crates/marlin-workspace-view:marlin_workspace_view",
    ],
)
